# operating_system

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
config/: manifest.yaml
config/boot/: limine.cfg
kernel/: Cargo.toml  linker.ld
kernel/src/: main.rs
kernel/src/allocator/: bump.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: acpi.rs  gdt.rs  idt.rs  mmu.rs  mod.rs
userspace/init/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  resolve.rs
xtask/src/actions/run/: mod.rs
xtask/src/manifest/: disk.rs  mod.rs  qemu.rs
