[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.1"
spin = "0.9"
x86 = "0.52.0"
log = "0.4.19"
klogger = "0.0.16"
static_assertions = { version = "1.1.0", features = ["nightly"] }
bitflags = { version = "2.3.2" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10.2"
rsdp = "2.0.0"
acpi = "4.1.1"
aml = "0.16.4"
