[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
byte-unit = { version = "4.0.19", features = ["serde"] }
clap = { version = "4.3.5", features = ["derive"] }
fatfs = "0.3.6"
fscommon = "0.1.1"
gpt = "3.0.0"
heck = "0.4.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
walkdir = "2.3.3"
